--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ ext{
             javax_annotation    : "10.0-b28",
             butterknife         : "8.4.0",
             rxandroid           : "1.2.1",
-            retrofit            : "2.1.0"
+            retrofit            : "2.1.0",
+            recyclerview        : "25.3.1"
     ]
 }
 buildscript {
